--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/Ehis-o-e/Task-tracker-CLI#readme",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
