--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "esnext",
-  
+    "module": "NodeNext",
     "target": "es2020",
     "types": ["node"],
     // For nodejs:
